<resources>
    <string name="app_name" translatable="false">CopyCat</string>
    <string name="hello_name">Hello, CopyCat!</string>
    <string name="ready_player_one">Are you ready for today\'s class?</string>
    <string name="image_desc_profile">Profile Image</string>
    <string name="search_hint"><font size="12">Search class, Assignments etc.,</font></string>
    <string name="in_10_minutes">In 10:00 Min</string>
    <string name="search_button">Search</string>

    <string name="class_name_math">Math</string>
    <string name="class_topic_math">Rational Numbers</string>
    <string name="class_teacher_math">By : Mr. Sarman Joshi</string>
    <string name="class_time_math">18 Sept | 2:00 PM</string>

    <string name="class_name_science">Science</string>
    <string name="class_topic_science">Crop Production &amp; Management</string>
    <string name="class_teacher_science">By : Miss. Jyati Maheta</string>
    <string name="class_time_science">18 Sept | 3:30 PM</string>

    <string name="class_name_computer">Computer</string>
    <string name="class_topic_computer">Container Orchestration</string>
    <string name="class_teacher_computer">By : Mr. CopyCat</string>
    <string name="class_time_computer">19 Sept | 1:00 PM</string>

    <string name="class_name_multimedia">Multimedia</string>
    <string name="class_topic_multimedia">Creating YouTube Video</string>
    <string name="class_teacher_multimedia">By : Mr. NiceGuy</string>
    <string name="class_time_multimedia">19 Sept | 4:00 PM</string>

    <string name="class_name_statistic">Statistics</string>
    <string name="class_topic_statistic">Counting Probability</string>
    <string name="class_teacher_statistic">By : Mr. Men in Black</string>
    <string name="class_time_statistic">20 Sept | 1:00 PM</string>

    <string name="class_topic">Square and Square Roots</string>
    <string name="class_teacher">By : Mr. Sarman Joshi</string>
    <string name="class_member">20+ Members joined</string>
    <string name="class_join">Join Class</string>
    <string name="class_upcoming">Upcoming Classes</string>
    <string name="view_all">View All</string>
    <string name="class_assignments">Assignments</string>
    <string name="circles">Lingkaran kecil</string>

    <string name="class_a1">Assignment 1</string>
    <string name="class_a1_inf">Rational Numbers assignment, Very important for your next exam&#8230;</string>
    <string name="class_a1_drt">1 Day Left</string>

    <string name="class_a2">Assignment 2</string>
    <string name="class_a2_inf">Crop Production &amp; Mgt. Very important for your next exam&#8230;</string>
    <string name="class_a2_drt">4 Days Left</string>

    <string name="class_a3">Assignment 3</string>
    <string name="class_a3_inf">Container Orchestration assignment, Very important for your next exam&#8230;</string>
    <string name="class_a3_drt">5 Days Left</string>

    <string name="class_a4">Assignment 4</string>
    <string name="class_a4_inf">Creating YouTube Video assignment, Very important for your next exam&#8230;</string>
    <string name="class_a4_drt">7 Days Left</string>

    <string name="class_a5">Assignment 5</string>
    <string name="class_a5_inf">Counting Probability assignment, Very important for your next exam&#8230;</string>
    <string name="class_a5_drt">8 Days Left</string>

    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="class_view">View Class</string>
    <string name="class_back">Back</string>
    <string name="class_desc"><font><b>Squares</b></font> and <font><b>square roots</b></font> both concepts are opposite in nature to each other. Squares are the numbers, generated after multiplying a value by itself. Whereas square root of a number is value which on getting multiplied by itself gives the original value.</string>
</resources>